--- a/header.html
+++ b/header.html
@@ -3,23 +3,23 @@
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
-				<a class="navbar-brand">Olá usuário</a>
+				<a class="navbar-brand">Hello User</a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Seus projetos <span class="caret"></span></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Your projects <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							<li><a>Ferramenta de Requisitos</a></li>
 							<li><a>Diablo 3</a></li>
 							<li><a>Ubuntu 20.04</a></li>
 						</ul>
 					</li>
-					<li><a href="questionarie_page.html">Novo Projeto</a></li>
+					<li><a href="questionarie_page.html">New Project</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html">Sair</a></li>
+					<li><a href="index.html">Log Out</a></li>
 				</ul>
 			</div>
 		</div>
